new playlist added

--- a/public/consolidated_music/metadata/song_playlist_mapping.json
+++ b/public/consolidated_music/metadata/song_playlist_mapping.json
@@ -26,22 +26,22 @@
       "Best tamil songs of all time"
     ],
     "song_f904bcb561f8": [
-      "Best tamil songs of all time"
+      "Best of tamil songs 2010 2024"
     ],
     "song_ad432bc3905d": [
-      "Best tamil songs of all time"
+      "Best of tamil songs 2010 2024"
     ],
     "song_16381ebdfa4f": [
-      "Soothing"
+      "Best of tamil songs 2010 2024"
     ],
     "song_b0c033d9237c": [
-      "Best tamil songs of all time"
+      "Best of tamil songs 2010 2024"
     ],
     "song_3cd1ee8dc7bd": [
-      "Depression pain tamil songs"
+      "Best of tamil songs 2010 2024"
     ],
     "song_87179519bee4": [
-      "Best tamil songs of all time"
+      "Best of tamil songs 2010 2024"
     ],
     "song_a36025857866": [
       "Best tamil songs of all time"
@@ -62,7 +62,7 @@
       "Old songs"
     ],
     "song_1f536bba5b5a": [
-      "Best tamil songs of all time"
+      "Best of tamil songs 2010 2024"
     ],
     "song_6981c94d29af": [
       "All in one",
@@ -102,10 +102,10 @@
       "Soothing"
     ],
     "song_b7a757592eca": [
-      "Love songs filtered by key"
+      "Best of tamil songs 2010 2024"
     ],
     "song_3afbd2b96bc9": [
-      "Soothing"
+      "Best of tamil songs 2010 2024"
     ],
     "song_33e14a6d3571": [
       "Best tamil songs of all time"
@@ -143,8 +143,7 @@
       "Depression pain tamil songs"
     ],
     "song_4740952729fc": [
-      "All in one",
-      "Tamilsongs best of all time"
+      "Best of tamil songs 2010 2024"
     ],
     "song_d15d65482bad": [
       "Feel good tamil songs",
@@ -155,14 +154,13 @@
       "Tamilsongs best of all time"
     ],
     "song_08d629b4fcbf": [
-      "All in one",
-      "Tamil best love feeling songs"
+      "Best of tamil songs 2010 2024"
     ],
     "song_983ab50870c9": [
       "Soothing"
     ],
     "song_5ee6e687da63": [
-      "All in one"
+      "Best of tamil songs 2010 2024"
     ],
     "song_a51bcb1fa5cd": [
       "Tamil songs that feel good now"
@@ -186,16 +184,16 @@
       "All in one"
     ],
     "song_5c61f271dc96": [
-      "All in one"
+      "Best of tamil songs 2010 2024"
     ],
     "song_f8d9b912fd7d": [
-      "Depression pain tamil songs"
+      "Best of tamil songs 2010 2024"
     ],
     "song_ee38e253e01a": [
       "Depression pain tamil songs"
     ],
     "song_3eac628e59ee": [
-      "Best tamil songs of all time"
+      "Best of tamil songs 2010 2024"
     ],
     "song_3b04acd03b57": [
       "Best tamil songs of all time"
@@ -234,7 +232,7 @@
       "Love songs filtered by key"
     ],
     "song_f2e2ce2d08b0": [
-      "Soothing"
+      "Best of tamil songs 2010 2024"
     ],
     "song_4cb8a41aa028": [
       "All in one"
@@ -246,10 +244,10 @@
       "All in one"
     ],
     "song_5aeb6362db43": [
-      "Depression pain tamil songs"
+      "Best of tamil songs 2010 2024"
     ],
     "song_3b6081745b96": [
-      "Soothing"
+      "Best of tamil songs 2010 2024"
     ],
     "song_0442cc0a6267": [
       "All in one"
@@ -267,22 +265,22 @@
       "Depression pain tamil songs"
     ],
     "song_073b9e1d43b6": [
-      "Depression pain tamil songs"
+      "Best of tamil songs 2010 2024"
     ],
     "song_180ea4e26fe3": [
       "All in one"
     ],
     "song_deffdc82e8b1": [
-      "Soothing"
+      "Best of tamil songs 2010 2024"
     ],
     "song_c646fe9219f1": [
       "All in one"
     ],
     "song_a6ccda515b3b": [
-      "Soothing"
+      "Best of tamil songs 2010 2024"
     ],
     "song_bcd3370b1115": [
-      "Love songs filtered by key"
+      "Best of tamil songs 2010 2024"
     ],
     "song_1a8f4a7cf0fd": [
       "All in one"
@@ -291,8 +289,7 @@
       "Love songs filtered by key"
     ],
     "song_0c8195454dfe": [
-      "All in one",
-      "Tamilsongs best of all time"
+      "Best of tamil songs 2010 2024"
     ],
     "song_28d9688e0dc0": [
       "All in one"
@@ -304,7 +301,7 @@
       "All in one"
     ],
     "song_a9e2560892f7": [
-      "Depression pain tamil songs"
+      "Best of tamil songs 2010 2024"
     ],
     "song_b5488e2657e9": [
       "Soothing"
@@ -403,7 +400,7 @@
       "Soothing"
     ],
     "song_b82d0461c6a4": [
-      "All in one"
+      "Best of tamil songs 2010 2024"
     ],
     "song_f7b2c936066f": [
       "All in one"
@@ -458,7 +455,7 @@
       "All in one"
     ],
     "song_89a98eae45ad": [
-      "Soothing"
+      "Best of tamil songs 2010 2024"
     ],
     "song_572bc1ae2b33": [
       "Soothing"
@@ -504,7 +501,7 @@
       "All in one"
     ],
     "song_070d2939cb16": [
-      "Best tamil songs of all time"
+      "Best of tamil songs 2010 2024"
     ],
     "song_3f7a7b6d600f": [
       "All in one"
@@ -516,7 +513,7 @@
       "Love songs filtered by key"
     ],
     "song_45894d548884": [
-      "Soothing"
+      "Best of tamil songs 2010 2024"
     ],
     "song_80838f0b1bee": [
       "All in one"
@@ -528,7 +525,7 @@
       "Soothing"
     ],
     "song_81592f37cf0b": [
-      "Soothing"
+      "Best of tamil songs 2010 2024"
     ],
     "song_f81236c03f19": [
       "All in one"
@@ -552,7 +549,7 @@
       "Depression pain tamil songs"
     ],
     "song_2a313737c158": [
-      "Depression pain tamil songs"
+      "Best of tamil songs 2010 2024"
     ],
     "song_639f9f9ab37d": [
       "Depression pain tamil songs"
@@ -567,10 +564,10 @@
       "Depression pain tamil songs"
     ],
     "song_239babaa5d6a": [
-      "Love songs filtered by key"
+      "Best of tamil songs 2010 2024"
     ],
     "song_5ba998f116cb": [
-      "Depression pain tamil songs"
+      "Best of tamil songs 2010 2024"
     ],
     "song_ba19f7dba410": [
       "Love songs filtered by key"
@@ -726,7 +723,7 @@
       "Tamilsongs best of all time"
     ],
     "song_47b8323eabdb": [
-      "Best tamil songs of all time"
+      "Best of tamil songs 2010 2024"
     ],
     "song_54af5dad1c89": [
       "All in one"
@@ -849,10 +846,10 @@
       "Trending now tamil"
     ],
     "song_54ba3661c057": [
-      "All in one"
+      "Best of tamil songs 2010 2024"
     ],
     "song_16ed4eb13058": [
-      "Soothing"
+      "Best of tamil songs 2010 2024"
     ],
     "song_cdc1fd4e7bb5": [
       "Depression pain tamil songs"
@@ -888,7 +885,7 @@
       "Soothing"
     ],
     "song_6061714295af": [
-      "Love songs filtered by key"
+      "Best of tamil songs 2010 2024"
     ],
     "song_f91eca96ba50": [
       "All in one"
@@ -900,7 +897,7 @@
       "Love songs filtered by key"
     ],
     "song_4925f27f8c31": [
-      "Best tamil songs of all time"
+      "Best of tamil songs 2010 2024"
     ],
     "song_dab1366412f3": [
       "Soothing"
@@ -912,7 +909,7 @@
       "Soothing"
     ],
     "song_20254d5657d7": [
-      "All in one"
+      "Best of tamil songs 2010 2024"
     ],
     "song_6be4ae6bfe8f": [
       "Best tamil songs of all time"
@@ -939,7 +936,7 @@
       "All in one"
     ],
     "song_ea2808f3558a": [
-      "Best tamil songs of all time"
+      "Best of tamil songs 2010 2024"
     ],
     "song_bb8093ca5df8": [
       "Old songs"
@@ -1008,7 +1005,7 @@
       "All in one"
     ],
     "song_db84b1797dcf": [
-      "Best tamil songs of all time"
+      "Best of tamil songs 2010 2024"
     ],
     "song_f8611e114eb6": [
       "Soothing"
@@ -1020,7 +1017,7 @@
       "All in one"
     ],
     "song_8933d28c63e9": [
-      "All in one"
+      "Best of tamil songs 2010 2024"
     ],
     "song_177c1c6fca00": [
       "Soothing"
@@ -1088,7 +1085,7 @@
       "Depression pain tamil songs"
     ],
     "song_87e4a00d6cbe": [
-      "Love songs filtered by key"
+      "Best of tamil songs 2010 2024"
     ],
     "song_fd758c0bf997": [
       "Old songs"
@@ -1100,7 +1097,7 @@
       "Best tamil songs of all time"
     ],
     "song_a93b8eac998d": [
-      "Love songs filtered by key"
+      "Best of tamil songs 2010 2024"
     ],
     "song_07089b036f78": [
       "Love songs filtered by key"
@@ -1133,7 +1130,7 @@
       "Love songs filtered by key"
     ],
     "song_4931ae62cad3": [
-      "Soothing"
+      "Best of tamil songs 2010 2024"
     ],
     "song_d08da9f9632c": [
       "All in one"
@@ -1197,7 +1194,7 @@
       "Best tamil songs of all time"
     ],
     "song_4081dd1651e3": [
-      "Best tamil songs of all time"
+      "Best of tamil songs 2010 2024"
     ],
     "song_ea28ae2e1bee": [
       "Depression pain tamil songs"
@@ -1260,7 +1257,7 @@
       "Tamilsongs best of all time"
     ],
     "song_08d25ca059f8": [
-      "Tamil songs that feel good now"
+      "Best of tamil songs 2010 2024"
     ],
     "song_b16f345dad19": [
       "Soothing"
@@ -1480,7 +1477,7 @@
       "Feel it"
     ],
     "song_ab932845b50f": [
-      "Feel it"
+      "Best of tamil songs 2010 2024"
     ],
     "song_b054c2b81501": [
       "Best tamil songs of all time"
@@ -2545,10 +2542,10 @@
       "Best tamil songs of all time"
     ],
     "song_254990dd71c1": [
-      "Old songs"
+      "Best of tamil songs 2010 2024"
     ],
     "song_ea12e4bee9a3": [
-      "Depression pain tamil songs"
+      "Best of tamil songs 2010 2024"
     ],
     "song_06a17965811a": [
       "Tamil best love feeling songs"
@@ -2557,10 +2554,10 @@
       "Soothing"
     ],
     "song_9045151fd344": [
-      "Depression pain tamil songs"
+      "Best of tamil songs 2010 2024"
     ],
     "song_c42b7fe787ef": [
-      "Love songs filtered by key"
+      "Best of tamil songs 2010 2024"
     ],
     "song_e338cb004e79": [
       "Best tamil songs of all time"
@@ -2627,19 +2624,19 @@
       "Tamilsongs best of all time"
     ],
     "song_2371a023ffd8": [
-      "Depression pain tamil songs"
+      "Best of tamil songs 2010 2024"
     ],
     "song_2fbfb33a5ab3": [
       "Tamilsongs best of all time"
     ],
     "song_a33b3161ca83": [
-      "Best tamil songs of all time"
+      "Best of tamil songs 2010 2024"
     ],
     "song_f500b56d9c05": [
       "Tamil best love feeling songs"
     ],
     "song_74c922cf261d": [
-      "Old songs"
+      "Best of tamil songs 2010 2024"
     ],
     "song_e8b4a3f3f3af": [
       "Soothing"
@@ -2726,7 +2723,7 @@
       "Love songs filtered by key"
     ],
     "song_a8032f2dbccc": [
-      "Love songs filtered by key"
+      "Best of tamil songs 2010 2024"
     ],
     "song_43ef45140d64": [
       "Soothing"
@@ -2759,13 +2756,13 @@
       "Love songs filtered by key"
     ],
     "song_0d9b5f90bacf": [
-      "Love songs filtered by key"
+      "Best of tamil songs 2010 2024"
     ],
     "song_214b7883152a": [
       "Best tamil songs of all time"
     ],
     "song_66a562b67dc4": [
-      "Love songs filtered by key"
+      "Best of tamil songs 2010 2024"
     ],
     "song_527cd7dd45ee": [
       "Tamil love melody songs"
@@ -2795,7 +2792,7 @@
       "Tamil love melody songs"
     ],
     "song_2704aae91b1e": [
-      "Tamil love melody songs"
+      "Best of tamil songs 2010 2024"
     ],
     "song_4a3052610c15": [
       "Tamil songs that feel good now"
@@ -2810,13 +2807,13 @@
       "Tamil love melody songs"
     ],
     "song_eb77477fae8b": [
-      "Tamil love melody songs"
+      "Best of tamil songs 2010 2024"
     ],
     "song_c980c37dde31": [
       "Tamil songs that feel good now"
     ],
     "song_9ffc0f4c206c": [
-      "Depression pain tamil songs"
+      "Best of tamil songs 2010 2024"
     ],
     "song_3abda1eb303d": [
       "Tamil love melody songs"
@@ -3070,7 +3067,7 @@
       "Tamilsongs best of all time"
     ],
     "song_299ffea3b797": [
-      "Depression pain tamil songs"
+      "Best of tamil songs 2010 2024"
     ],
     "song_b9cd21d8f320": [
       "Tamilsongs best of all time"
@@ -3451,7 +3448,7 @@
       "Tamilsongs best of all time"
     ],
     "song_030e91d3f5d7": [
-      "Love songs filtered by key"
+      "Best of tamil songs 2010 2024"
     ],
     "song_22764be42154": [
       "Tamilsongs best of all time"
@@ -3523,7 +3520,7 @@
       "Love songs filtered by key"
     ],
     "song_871cd6b273c0": [
-      "Tamilsongs best of all time"
+      "Best of tamil songs 2010 2024"
     ],
     "song_283a28c24532": [
       "Tamilsongs best of all time"
@@ -3562,7 +3559,7 @@
       "Tamilsongs best of all time"
     ],
     "song_fb49ccffa783": [
-      "Love songs filtered by key"
+      "Best of tamil songs 2010 2024"
     ],
     "song_f3a61b43db7c": [
       "Tamilsongs best of all time"
@@ -3640,7 +3637,7 @@
       "Tamilsongs best of all time"
     ],
     "song_d146ecf64c40": [
-      "Love songs filtered by key"
+      "Best of tamil songs 2010 2024"
     ],
     "song_dceef34fea4e": [
       "Old songs"
@@ -3655,7 +3652,7 @@
       "Tamilsongs best of all time"
     ],
     "song_46eb545a0809": [
-      "Best tamil songs of all time"
+      "Best of tamil songs 2010 2024"
     ],
     "song_db4e99ef1302": [
       "Old songs"
@@ -3751,7 +3748,7 @@
       "Tamilsongs best of all time"
     ],
     "song_04e7b690d8ac": [
-      "Tamilsongs best of all time"
+      "Best of tamil songs 2010 2024"
     ],
     "song_8f6587ac832a": [
       "Love songs filtered by key"
@@ -4063,7 +4060,7 @@
       "Tamilsongs best of all time"
     ],
     "song_c28f04d35406": [
-      "Best tamil songs of all time"
+      "Best of tamil songs 2010 2024"
     ],
     "song_2b03c2180386": [
       "Tamilsongs best of all time"
@@ -4135,7 +4132,7 @@
       "Tamilsongs best of all time"
     ],
     "song_e5615a86b31a": [
-      "Tamilsongs best of all time"
+      "Best of tamil songs 2010 2024"
     ],
     "song_78fa1c33c693": [
       "Tamilsongs best of all time"
@@ -4471,7 +4468,7 @@
       "Love songs filtered by key"
     ],
     "song_5fc3bd3a7521": [
-      "Love songs filtered by key"
+      "Best of tamil songs 2010 2024"
     ],
     "song_8473e18e4d48": [
       "Love songs filtered by key"
@@ -4525,10 +4522,10 @@
       "Soothing"
     ],
     "song_3438090cf1fe": [
-      "Soothing"
+      "Best of tamil songs 2010 2024"
     ],
     "song_cfaa93cf1756": [
-      "Love songs filtered by key"
+      "Best of tamil songs 2010 2024"
     ],
     "song_650abd0eb706": [
       "Soothing"
@@ -4552,7 +4549,7 @@
       "Old songs"
     ],
     "song_45ee0bf04b3b": [
-      "Love songs filtered by key"
+      "Best of tamil songs 2010 2024"
     ],
     "song_f89429864e39": [
       "Love songs filtered by key"
@@ -4618,7 +4615,7 @@
       "Love songs filtered by key"
     ],
     "song_bd41cd36d258": [
-      "Love songs filtered by key"
+      "Best of tamil songs 2010 2024"
     ],
     "song_4b7b57610b90": [
       "Love songs filtered by key"
@@ -4885,7 +4882,7 @@
       "Depression pain tamil songs"
     ],
     "song_99241b93b562": [
-      "Depression pain tamil songs"
+      "Best of tamil songs 2010 2024"
     ],
     "song_a3baf387e9b5": [
       "Depression pain tamil songs"
@@ -4906,7 +4903,7 @@
       "Depression pain tamil songs"
     ],
     "song_dfeac07c36fd": [
-      "Depression pain tamil songs"
+      "Best of tamil songs 2010 2024"
     ],
     "song_ed5732fbf8f5": [
       "Depression pain tamil songs"
@@ -4915,7 +4912,7 @@
       "Depression pain tamil songs"
     ],
     "song_77f8f8a4f522": [
-      "Depression pain tamil songs"
+      "Best of tamil songs 2010 2024"
     ],
     "song_cfbc52ae7fc7": [
       "Depression pain tamil songs"
@@ -6491,18 +6488,177 @@
     ],
     "song_75f1795fce10": [
       "Best tamil songs of all time"
+    ],
+    "song_410e43ab3601": [
+      "Best of tamil songs 2010 2024"
+    ],
+    "song_66f81ed5cfd1": [
+      "Best of tamil songs 2010 2024"
+    ],
+    "song_0006b4b44771": [
+      "Best of tamil songs 2010 2024"
+    ],
+    "song_bbe62f83bf7f": [
+      "Best of tamil songs 2010 2024"
+    ],
+    "song_41d1205da788": [
+      "Best of tamil songs 2010 2024"
+    ],
+    "song_bc204d1d0e17": [
+      "Best of tamil songs 2010 2024"
+    ],
+    "song_b4b4b1b32ab1": [
+      "Best of tamil songs 2010 2024"
+    ],
+    "song_61eb8aee19ab": [
+      "Best of tamil songs 2010 2024"
+    ],
+    "song_5718f0c3737a": [
+      "Best of tamil songs 2010 2024"
+    ],
+    "song_b0b5229e2453": [
+      "Best of tamil songs 2010 2024"
+    ],
+    "song_60e346892942": [
+      "Best of tamil songs 2010 2024"
+    ],
+    "song_3fbd0fcd5c10": [
+      "Best of tamil songs 2010 2024"
+    ],
+    "song_45395855c435": [
+      "Best of tamil songs 2010 2024"
+    ],
+    "song_428e79b510ef": [
+      "Best of tamil songs 2010 2024"
+    ],
+    "song_89ca8ecd50d3": [
+      "Best of tamil songs 2010 2024"
+    ],
+    "song_a8d08d93f81f": [
+      "Best of tamil songs 2010 2024"
+    ],
+    "song_9f8b3daffcac": [
+      "Best of tamil songs 2010 2024"
+    ],
+    "song_cf36f688c111": [
+      "Best of tamil songs 2010 2024"
+    ],
+    "song_65a7e06ff5b1": [
+      "Best of tamil songs 2010 2024"
+    ],
+    "song_ad228a23c8a3": [
+      "Best of tamil songs 2010 2024"
+    ],
+    "song_a4d64d3b41d2": [
+      "Best of tamil songs 2010 2024"
+    ],
+    "song_ad4e594372b8": [
+      "Best of tamil songs 2010 2024"
+    ],
+    "song_1fab13544aa1": [
+      "Best of tamil songs 2010 2024"
+    ],
+    "song_1da0ce84422d": [
+      "Best of tamil songs 2010 2024"
+    ],
+    "song_58e80ed7c01f": [
+      "Best of tamil songs 2010 2024"
+    ],
+    "song_8906531d6301": [
+      "Best of tamil songs 2010 2024"
+    ],
+    "song_22e897b52d86": [
+      "Best of tamil songs 2010 2024"
+    ],
+    "song_a90989a6a9a1": [
+      "Best of tamil songs 2010 2024"
+    ],
+    "song_94acd7bcd845": [
+      "Best of tamil songs 2010 2024"
+    ],
+    "song_51a4d5e9cf86": [
+      "Best of tamil songs 2010 2024"
+    ],
+    "song_729b3dc1ac41": [
+      "Best of tamil songs 2010 2024"
+    ],
+    "song_c2ac4106ee69": [
+      "Best of tamil songs 2010 2024"
+    ],
+    "song_414ec056a8fb": [
+      "Best of tamil songs 2010 2024"
+    ],
+    "song_eef40e302df6": [
+      "Best of tamil songs 2010 2024"
+    ],
+    "song_f465d23237df": [
+      "Best of tamil songs 2010 2024"
+    ],
+    "song_6ee53405f59f": [
+      "Best of tamil songs 2010 2024"
+    ],
+    "song_5e9ac50648c8": [
+      "Best of tamil songs 2010 2024"
+    ],
+    "song_ccacf075bf75": [
+      "Best of tamil songs 2010 2024"
+    ],
+    "song_b9221bffc60c": [
+      "Best of tamil songs 2010 2024"
+    ],
+    "song_8aef641da8f8": [
+      "Best of tamil songs 2010 2024"
+    ],
+    "song_affdd2de8c89": [
+      "Best of tamil songs 2010 2024"
+    ],
+    "song_9c49f053a3ce": [
+      "Best of tamil songs 2010 2024"
+    ],
+    "song_314a6488da14": [
+      "Best of tamil songs 2010 2024"
+    ],
+    "song_dd4bbccaed67": [
+      "Best of tamil songs 2010 2024"
+    ],
+    "song_b189e1884be5": [
+      "Best of tamil songs 2010 2024"
+    ],
+    "song_10346f0ae744": [
+      "Best of tamil songs 2010 2024"
+    ],
+    "song_77fa144d1138": [
+      "Best of tamil songs 2010 2024"
+    ],
+    "song_bc4b6c517f7c": [
+      "Best of tamil songs 2010 2024"
+    ],
+    "song_a3ed3b736192": [
+      "Best of tamil songs 2010 2024"
+    ],
+    "song_26c0415d5b18": [
+      "Best of tamil songs 2010 2024"
+    ],
+    "song_faab7ad62876": [
+      "Best of tamil songs 2010 2024"
+    ],
+    "song_a2c3d64fb65e": [
+      "Best of tamil songs 2010 2024"
+    ],
+    "song_36fa3efd8a9b": [
+      "Best of tamil songs 2010 2024"
     ]
   },
   "stats": {
-    "total_mappings": 2152,
-    "generated_at": "2025-08-05T16:34:49.853398",
+    "total_mappings": 2205,
+    "generated_at": "2025-08-05T17:43:48.638391",
     "last_session_stats": {
-      "new_songs_added": 72,
+      "new_songs_added": 53,
       "new_playlists_added": 1,
-      "duplicates_skipped": 109,
+      "duplicates_skipped": 84,
       "playlists_updated": 0,
-      "existing_songs_found": 2080,
-      "songs_added_to_existing_playlists": 107
+      "existing_songs_found": 2152,
+      "songs_added_to_existing_playlists": 77
     }
   }
 }
